Added swagger format. Fixed errors in controllers
